--- a/doc/devel/Makefile.am
+++ b/doc/devel/Makefile.am
@@ -1,3 +1,5 @@
+SUBDIRS = howtos
+
 %.toc: %.tex
 	touch $@
 	pdflatex $<
@@ -5,6 +7,13 @@
 %.pdf: %.tex %.toc 
 	pdflatex $<
 
-noinst_DATA = manual.pdf
+all-local:
+	@if test -f manual.tex; then \
+	  $(MAKE) $(AM_MAKEFLAGS) manual.pdf ; \
+	else \
+	  echo "***" ;\
+	  echo "*** The sources for the developers manual are in the CVS version only." ; \
+	  echo "***" ; \
+	fi
 
 CLEANFILES = manual.log manual.pdf manual.aux manual.toc
