--- a/doc/users/Makefile.am
+++ b/doc/users/Makefile.am
@@ -5,6 +5,13 @@
 %.pdf: %.tex %.toc 
 	pdflatex $<
 
-noinst_DATA = manual.pdf
+all-local:
+	@if test -f manual.tex; then \
+	  $(MAKE) $(AM_MAKEFLAGS) manual.pdf ; \
+	else \
+	  echo "***" ;\
+	  echo "*** There is no users manual yet. Please consider contributing to it." ; \
+	  echo "***" ; \
+	fi
 
 CLEANFILES = manual.log manual.pdf manual.aux manual.toc
