--- a/app/simulator/rcsoccersim3D.in
+++ b/app/simulator/rcsoccersim3D.in
@@ -20,7 +20,7 @@ else
     datadir=@datadir@
     pkgdatadir=${datadir}/@PACKAGE@
     SIMULATOR="${exec_prefix}/bin/rcssserver3D"
-    PARAM="--ipc_force_remove --agent_db_fn ${pkgdatadir}/agentdb.list $*"
+    PARAM="--ipc_force_remove --agent_db_fn ${pkgdatadir}/agentdb.xml $*"
     if test -x "${exec_prefix}/bin/rcssmonitor3D-kerosin"; then
 	MONITOR="${exec_prefix}/bin/rcssmonitor3D-kerosin"
     else
