2004-12-20	Tom Howard	<tomhoward@users.sf.net>
	* ./acinclude.m4
	* ./configure.ac
	* ./app/agenttest/Makefile.am
	* ./app/rcssmonitor3d/lib/commserver.cpp
	* ./doc/Makefile.am
	* ./doc/devel/Makefile.am
	* ./doc/users/Makefile.am
	* ./lib/oxygen/simulationserver/netcontrol.cpp
	* ./plugin/soccer/beameffector/beameffector.cpp
	* ./utility/rcssnet/exception.cpp
	Initial OS X port

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -10,13 +10,13 @@ endif
 install-data-local: $(srcdir)/api/index.html
 	rm -rf $(DESTDIR)$(pkgdatadir)/api/
 	rm -rf $(DESTDIR)$(pkgdatadir)/html/
-	mkdir --parents $(DESTDIR)$(pkgdatadir)/
+	mkdir -p $(DESTDIR)$(pkgdatadir)/
 	cp -r $(srcdir)/api $(DESTDIR)$(pkgdatadir)/
 	chmod -R a+rX $(DESTDIR)$(pkgdatadir)/api
 
 apidoc: Doxyfile
 	rm -rf $(srcdir)/api/developers
-	mkdir --parents $(srcdir)/api/developers
+	mkdir -p $(srcdir)/api/developers
 	cp $(srcdir)/devel/howtos/*.* $(srcdir)/api/developers/
 if DOXYGEN
 	doxygen Doxyfile
