--- a/doc/devel/Makefile.am
+++ b/doc/devel/Makefile.am
@@ -1,5 +1,6 @@
 SUBDIRS = howtos
 
+if COND_PDFLATEX
 %.toc: %.tex
 	touch $@
 	pdflatex $<
@@ -17,3 +18,4 @@ all-local:
 	fi
 
 CLEANFILES = manual.log manual.pdf manual.aux manual.toc
+endif
