- added MonitorItem files

--- a/lib/oxygen/Makefile.am
+++ b/lib/oxygen/Makefile.am
@@ -154,7 +154,8 @@ geometryserver/trimesh.cpp \
 geometryserver/indexbuffer.cpp \
 monitorserver/monitorserver.cpp \
 monitorserver/monitorserver_c.cpp \
-monitorserver/monitorsystem_c.cpp
+monitorserver/monitorsystem_c.cpp \
+monitorserver/monitoritem_c.cpp
 
 nobase_libpkginclude_HEADERS = \
 agentaspect/agentaspect.h \
@@ -215,4 +216,5 @@ geometryserver/trimesh.h \
 geometryserver/indexbuffer.h \
 monitorserver/monitorserver.h \
 monitorserver/monitorsystem.h \
+monitorserver/monitoritem.h \
 $(spades_headers)
