- added soccermonitor directory

--- a/plugin/Makefile.am
+++ b/plugin/Makefile.am
@@ -8,6 +8,7 @@ SUBDIRS = \
 	  collisionperceptor \
 	  sexpparser \
 	  soccer \
+	  soccermonitor \
           rubysceneimporter\
           voidmeshimporter\
           sparkmonitor\
