--- a/plugin/soccermonitor/Makefile.am
+++ b/plugin/soccermonitor/Makefile.am
@@ -6,11 +6,14 @@ soccermonitor_la_SOURCES = export.cpp \
 	soccermonitor.cpp \
 	soccermonitor_c.cpp \
 	soccerrender.cpp \
-	soccerrender_c.cpp
+	soccerrender_c.cpp \
+	soccerinput.cpp \
+	soccerinput_c.cpp
 
 nobase_libpkginclude_HEADERS = \
 	soccermonitor.h \
-	soccerrender.h
+	soccerrender.h \
+	soccerinput.h
 
 ## define include directory local to the pkgincludedir
 libpkgincludedir = $(includedir)/@PACKAGE@/soccermonitor
@@ -19,4 +22,5 @@ libpkgincludedir = $(includedir)/@PACKAGE@/soccermonitor
 # so we don't need the "lib" prefix in the module name
 soccermonitor_la_LDFLAGS = -module -version-info 1:0:0
 
-AM_CPPFLAGS = -I${top_srcdir}/lib @RUBY_CPPFLAGS@ -I${top_srcdir}/plugin @FREETYPE_CPPFLAGS@
+AM_CPPFLAGS = -I${top_srcdir}/lib -I${top_srcdir}/plugin \
+	-I${top_srcdir}/utility @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
