- added utility/sfsexp/ to the list of libraries

--- a/plugin/sparkmonitor/Makefile.am
+++ b/plugin/sparkmonitor/Makefile.am
@@ -9,7 +9,8 @@ sparkmonitor_la_SOURCES = \
 	sparkmonitorclient.cpp \
 	sparkmonitorclient_c.cpp
 
-sparkmonitor_la_LDFLAGS = -module -version-info 0:0:0
+sparkmonitor_la_LDFLAGS = -module -version-info 0:0:0 -L${top_srcdir}/utility/sfsexp/
+sparkmonitor_la_LIBADD = -lsexp
 
 AM_CPPFLAGS = -I${top_srcdir}/lib -I${top_srcdir}/utility @RUBY_CPPFLAGS@
 
