* app/agenttest/Makefile.am 	- For some inexplicable reason, Tom removed ReadBuffFD from the 	  sources list during the OSX port. I've put it back.

--- a/app/agenttest/Makefile.am
+++ b/app/agenttest/Makefile.am
@@ -23,8 +23,7 @@ agenttest_SOURCES = \
 	commserver.h commserver.cpp commserver_c.cpp \
 	behavior.h behavior.cpp behavior_c.cpp \
 	kicknrun.h kicknrun.cpp kicknrun_c.cpp \
-	soccer.h soccer.cpp soccer_c.cpp
-
-# ReadBuffFD.cpp
+	soccer.h soccer.cpp soccer_c.cpp \
+	ReadBuffFD.h ReadBuffFD.cpp
 
 dist_pkgdata_DATA = agenttest.rb
