--- a/app/rcssmonitor3d/kerosin/Makefile.am
+++ b/app/rcssmonitor3d/kerosin/Makefile.am
@@ -2,7 +2,7 @@ if BUILD_KEROSIN
 bin_PROGRAMS = rcssmonitor3D-kerosin
 
 if DEBUG
-LDADD = -lpthread -lGL -lGLU -lglut \
+LDADD = -lpthread -lGL -lGLU -lglut -lXi -lXmu\
 	${top_srcdir}/lib/spark/libspark_debug.la \
 	${top_srcdir}/lib/kerosin/libkerosin_debug.la \
 	${top_srcdir}/lib/oxygen/liboxygen_debug.la \
@@ -11,7 +11,7 @@ LDADD = -lpthread -lGL -lGLU -lglut \
 	${top_srcdir}/app/rcssmonitor3d/lib/librcssmonitor3D.la 
 rcssmonitor3D_kerosin_CXXFLAGS = -O -g -W -Wall
 else
-LDADD = -lpthread -lGL -lGLU -lglut \
+LDADD = -lpthread -lGL -lGLU -lglut -lXi -lXmu\
 	${top_srcdir}/lib/spark/libspark.la \
 	${top_srcdir}/lib/kerosin/libkerosin.la \
 	${top_srcdir}/lib/oxygen/liboxygen.la \
