- added hearperceptor/hearperceptor.h to the   nobase_libpkginclude_HEADERS list. This file is   missing in the rcssserver3D-0.4 release :-(

--- a/plugin/soccer/Makefile.am
+++ b/plugin/soccer/Makefile.am
@@ -71,7 +71,9 @@ sexpmonitor/sexpmonitor.h \
 soccerbase/soccerbase.h \
 soccercontrolaspect/soccercontrolaspect.h \
 soccerruleaspect/soccerruleaspect.h \
-visionperceptor/visionperceptor.h 
+visionperceptor/visionperceptor.h \
+hearperceptor/hearperceptor.h
+
 
 ## define include directory local to the pkgincludedir
 libpkgincludedir = $(includedir)/@PACKAGE@/soccer
