- fixed detection rule for the pdflatex tool

--- a/configure.ac
+++ b/configure.ac
@@ -32,7 +32,7 @@ AC_LIBTOOL_DLOPEN
 AC_PROG_LIBTOOL
 AC_PROG_AWK
 AC_CHECK_PROG([DOXYGEN], [doxygen], [yes], [no])
-AC_CHECK_PROG([PDFLATEX], [pdflatex])
+AC_CHECK_PROG([PDFLATEX], [pdflatex], [yes], [no])
 AM_CONDITIONAL(DOXYGEN, test x$DOXYGEN = xyes )
 AM_CONDITIONAL(COND_PDFLATEX, test x$PDFLATEX != x)
 AC_CHECK_PROG([HAVE_DOT], [dot], [YES], [NO])
