added ability to draw a very simple grasslike texture to rcssmonitor3D-lite The default texture is $prefix/local/share/rcssserver3d/grass.ppm
with the option "--texture" another texture of size 128x128 can be given.
If no absolute path is given in this option, the monitor looks in
~/.rcssserver3d/ and $prefix/local/share/rcssserver3d/ for the file.

If no texturefile is found a random texture (currently some kind of checkerboard)
is created.

--- a/app/rcssmonitor3d/lite/Makefile.am
+++ b/app/rcssmonitor3d/lite/Makefile.am
@@ -25,4 +25,4 @@ rcssmonitor3D_lite_SOURCES = \
 	camera.h camera.cpp \
 	glserver.h glserver.cpp
 
-dist_pkgdata_DATA = rcssmonitor3D-lite.rb
+dist_pkgdata_DATA = rcssmonitor3D-lite.rb grass.ppm
