- added entries for the HOAP2 model and behavior

--- a/app/agentspark/Makefile.am
+++ b/app/agentspark/Makefile.am
@@ -32,5 +32,7 @@ agentspark_SOURCES = main.cpp \
 	soccerbehavior.h \
 	soccerbehavior.cpp \
 	leggedspherebehavior.h \
-	leggedspherebehavior.cpp
+	leggedspherebehavior.cpp \
+	hoap2behavior.h \
+	hoap2behavior.cpp
 
