Corrected bug in the script that prevents arguments to be passed to Spades. Thanks go to Sander van Dijk for the fix.

--- a/app/simulator/rcsoccersim3D.in
+++ b/app/simulator/rcsoccersim3D.in
@@ -104,7 +104,7 @@ fi
 echo "Starting Simulator with these Parameters: $SPADESPARAM"
 echo
 
-${SIMULATOR} ${SPADESPARAM}&
+${SIMULATOR} -- ${SPADESPARAM}&
 PID=$!
 sleep 1
 ${MONITOR}
