added behaviors for a humanoid robot based upon the hoap2 model by joschka so far soccerbotbehavior is just a stripped version of hoap2behavior.

--- a/app/agentspark/Makefile.am
+++ b/app/agentspark/Makefile.am
@@ -31,6 +31,8 @@ agentspark_SOURCES = main.cpp \
 	carbehavior.h \
 	soccerbehavior.h \
 	soccerbehavior.cpp \
+	soccerbotbehavior.h \
+	soccerbotbehavior.cpp \
 	leggedspherebehavior.h \
 	leggedspherebehavior.cpp \
 	hoap2behavior.h \
