--- a/app/simspark/Makefile.am
+++ b/app/simspark/Makefile.am
@@ -35,6 +35,7 @@ dist_pkgdata_DATA = \
 	rsg/agent/soccerplayer.rsg \
 	rsg/agent/leggedsphere.rsg \
 	rsg/agent/hoap2.rsg \
+	rsg/agent/soccerbot.rsg \
 	rsg/agent/soccer.rsg \
 	rsg/agent/flag.rsg \
 	rsg/agent/simspark.rsg \
