- removed dependencies for libXi and libXmu

--- a/app/rcssmonitor3d/lite/Makefile.am
+++ b/app/rcssmonitor3d/lite/Makefile.am
@@ -1,14 +1,14 @@
 bin_PROGRAMS = rcssmonitor3D-lite
 
 if DEBUG
-LDADD = -lpthread -lGL -lGLU -lglut -lXi -lXmu \
+LDADD = -lpthread -lGL -lGLU -lglut \
 	${top_srcdir}/lib/oxygen/liboxygen_debug.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist_debug.la \
         ${top_srcdir}/lib/salt/libsalt_debug.la \
 	${top_srcdir}/app/rcssmonitor3d/lib/librcssmonitor3D.la 
 rcssmonitor3D_lite_CXXFLAGS = -O -g -W -Wall
 else
-LDADD = -lpthread -lGL -lGLU -lglut -lXi -lXmu \
+LDADD = -lpthread -lGL -lGLU -lglut \
 	${top_srcdir}/lib/oxygen/liboxygen.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist.la \
         ${top_srcdir}/lib/salt/libsalt.la \
