- added gyro rate perceptor sub dir

--- a/plugin/Makefile.am
+++ b/plugin/Makefile.am
@@ -2,6 +2,7 @@ SUBDIRS = \
 	  filesystemstd \
 	  filesystemzip \
 	  forceeffector \
+	  gyrorateperceptor \
 	  inputsdl \
 	  monitortest \
 	  perfectvisionperceptor \
