*** empty log message ***

--- a/plugin/gyrorateperceptor/Makefile.in
+++ b/plugin/gyrorateperceptor/Makefile.in
@@ -92,6 +92,7 @@ AUTOCONF = @AUTOCONF@
 AUTOHEADER = @AUTOHEADER@
 AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
+BOOST_THREADS_LIB = @BOOST_THREADS_LIB@
 CC = @CC@
 CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
